--- a/mysite/gr_chk/templates/gr_chk/contract_detail.html
+++ b/mysite/gr_chk/templates/gr_chk/contract_detail.html
@@ -1,19 +1,66 @@
-
-
 {% extends 'accounts/new_base.html' %}
 
 {% load static %}
-
 
 {% block content %}
 
   <div class="container-fluid">
     <ul class="list-group">
-      <li class="list-group-item active">ข้อมูลสัญญาเลขที่ : {{contract}} (PO: {{contract.po}}) Route : {{ routes }} </li>
+      <li class="list-group-item active">รายละเอียดทั่วไปของสัญญา</li>
+
       <li class="list-group-item">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="btn btn-primary" href="/gr_chk" role="button">กลับหน้าหลัก</a>
-        <a class="btn btn-primary" href="{% url 'contract_edit' pk=contract.pk %}" role="button">แก้ไขข้อมูล</a>
+        <div class="card-body">
+          <p>
+            ข้อมูลสัญญาเลขที่ : {{contract}} (PO: {{contract.po}}) Route : {{ contract.routes.count }}
+          </p>
+        </div>
+        <div class="text-center">
+          <a class="btn btn-primary" href="/gr_chk" role="button">กลับหน้าหลัก</a>
+          <a class="btn btn-primary" href="{% url 'contract_edit' pk=contract.pk %}" role="button">แก้ไขข้อมูล</a>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+<br>
+  <div class="container-fluid">
+    <ul class="list-group">
+      <li class="list-group-item active">รายละเอียดเส้นทาง</li>
+      <li class="list-group-item">
+        <div class="card-body text-center">
+          {% if contract.routes.count >= 1 %}
+            <div class="table-responsive">
+              <table class="table table-bordered table-hover" id="dataTable" width="80%" cellspacing="0">
+                <thead>
+                  <tr>
+                    <th>ลำดับที่</th>
+                    <th>เลขที่แบบ</th>
+                    <th>สถานที่</th>
+                    <th>Zone ค่างาน</th>
+                    <th>Edit</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for route in contract.routes.all %}
+                    <tr>
+                      <td><a href="{% url 'contract_detail' pk=contract.pk %}">{{ route.route_order }}</a></td>
+                      <td>{{ route.plan_id }}</td>
+                      <td>{{ route.route_name }}</td>
+                      <td>{{ route.route_level }}</td>
+                      <th><a href="{% url 'route_edit' pk=route.pk %}"><i class="fas fa-edit"></i></a></th>
+                    </tr>
+                  {% endfor %}
+                </<tbody>
+              </table>
+            {% else %}
+              <p>ไม่มีข้อมูลเส้นทาง</p>
+            {% endif %}
+          </div>
+          <div class="text-center">
+            <a class="btn btn-primary" href="{% url 'route_add' pk=contract.pk %}" role="button">เพิ่มเส้นทาง</a>
+          </div>
+
+        </div>
       </li>
 
     </ul>
