--- a/mysite/gr_chk/templates/gr_chk/contract_list.html
+++ b/mysite/gr_chk/templates/gr_chk/contract_list.html
@@ -14,14 +14,17 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="card-body">
+        <div class="card-body text-center">
           <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="80%" cellspacing="0">
+            <table class="table table-bordered table-hover" id="dataTable" width="80%" cellspacing="0">
               <thead>
                 <tr>
                   <th>ชื่อสัญญา</th>
                   <th>PO</th>
-                  <th>แก้ไขข้อมูล</th>
+                  <th>สถานะ</th>
+                  <th>จำนวนเส้นทาง</th>
+                  <th>มูลค่าสัญญา</th>
+                  <th>วงเงินที่เบิกแล้ว</th>
                 </tr>
               </thead>
               <tbody>
@@ -29,13 +32,16 @@
                   <tr>
                     <td><a href="{% url 'contract_detail' pk=contract.pk %}">{{ contract }}</a></td>
                     <td>{{ contract.po }}</td>
-                    <td>Click Me</td>
+                    <td>-</td>
+                    <td>{{ contract.routes.count}}</td>
+                    <td>-</td>
+                    <td>-</td>
                   </tr>
                 {% endfor %}
               </<tbody>
             </table>
           </div>
-          <a href="{% url 'contract_add' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="btn btn-primary" href="{% url 'contract_add' %}" role="button">เพิ่มสัญญาใหม่</a>
         </div>
       </li>
     </ul>
