--- a/mysite/gr_chk/templates/gr_chk/route_edit.html
+++ b/mysite/gr_chk/templates/gr_chk/route_edit.html
@@ -6,7 +6,7 @@
 
   <div class="container-fluid">
     <ul class="list-group">
-      <li class="list-group-item active">{{ title }}</li>
+      <li class="list-group-item active">เพิ่มข้อมูลเส้นทางที่ {{ route_count }}</li>
       <li class="list-group-item">
         <div class="alert alert-secondary alert-dismissible fade show" role="alert">
           * ข้อมูลที่จำเป็นต้องระบุ
@@ -20,7 +20,7 @@
             {{ form|crispy }}
             <div class="text-center">
               <input class="btn btn-primary" type="submit" value="Submit">
-              <a class="btn btn-primary" href="/gr_chk" role="button">กลับหน้าหลัก</a>
+              <a class="btn btn-primary" href="{% url 'contract_detail' pk=rtn_pk %}">กลับ</a>
             </div>
           </form>
         </div>
